Bug 397103 - Animations for KCollapsibleGroupBox (expanding/shrinking) do not respect (Breeze) style's animation preference
Summary: Animations for KCollapsibleGroupBox (expanding/shrinking) do not respect (Bre...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-02 19:31 UTC by Christoph Feck
Modified: 2018-09-26 20:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.51.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2018-08-02 19:31:30 UTC
To reproduce:
- run 'breeze-settings5' to disable Animations
- expand/shrink options in Ark > New Archive dialog

Expected behaviour:
- instant expand/shrink
Comment 1 Christoph Feck 2018-09-26 20:27:42 UTC
Git commit 953939b4727cf46b1e100e29f020e735c2cf92f5 by Christoph Feck.
Committed on 26/09/2018 at 20:25.
Pushed by cfeck into branch 'master'.

[KCollapsibleGroupBox] Respect style's widget animation duration

Query QStyle::SH_Widget_Animation_Duration style hint.

QTimeLine requires a duration > 0, so use 1 [ms] to make
the animation as fast as possible when disabled.
FIXED-IN: 5.51.0

Reviewed by: ngraham, elvisangelaccio

Differential Revision: https://phabricator.kde.org/D15611

M  +7    -0    src/kcollapsiblegroupbox.cpp

https://commits.kde.org/kwidgetsaddons/953939b4727cf46b1e100e29f020e735c2cf92f5