[KCollapsibleGroupBox] Respect style's widget animation duration

Query QStyle::SH_Widget_Animation_Duration style hint.

QTimeLine requires a duration > 0, so use 1 [ms] to make
the animation as fast as possible when disabled.

BUG: 397103
FIXED-IN: 5.51.0

Reviewed by: ngraham, elvisangelaccio

Differential Revision: https://phabricator.kde.org/D15611